# Deep

./: .gitignore  main.py  pyproject.toml
lab3/: Arteev_Spitsyn_lab3.docx  lab3.ipynb  perceptron.py  report.py
lab4/: Arteev_Spitsyn_lab4.docx  model.py  model_gpu.py  model_reg_gpu.py  read.ipynb  результаты.xlsx
lab5/: advance.py  basic.py  grad.py  lab5.ipynb  ock.py
lab6/: dataset.py  main.ipynb
